# rustium

./: Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: run_tests.sh  setup.sh
src/: base.rs  main.rs
src/locators/: demoLoc.rs  mod.rs
src/tests/: functional_tests.rs  performance_tests.rs
templates/: report.html
tests/: accessibility_tests.rs  functional_tests.rs  mod.rs  security_tests.rs
